--- a/accounts.yml
+++ b/accounts.yml
@@ -6,7 +6,12 @@ spring:
     url: jdbc:mysql://localhost:3306/bankly
     username: root
     password: root
+  jpa:
+    show-sql: true 
 
+# MySQL
+    hibernate: 
+      ddl-auto: update
 management:
   health:
     defaults:
