--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -1,7 +1,7 @@
 accounts:
   message: "Welcome to Bankly accounts related local APIs "
   contactDetails:
-    name: "Landry - Developer"
-    email: "landry.shema@51.173.42.31.com"
+    name: "Landry - DIT"
+    email: "landry.shema@62.163.54.21.com"
   onCallSupport:
     - (514) 641-5166
