--- a/accounts-qa.yml
+++ b/accounts-qa.yml
@@ -27,7 +27,7 @@ management:
 accounts:
   message: "Welcome to Bankly accounts related local APIs "
   contactDetails:
-    name: "Landry - Developer"
+    name: "Landry - QA"
     email: "landry.shema@51.173.42.31.com"
   onCallSupport:
     - (514) 641-5166
