--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -32,6 +32,6 @@ accounts:
   message: "Welcome to Bankly accounts related local APIs "
   contactDetails:
     name: "Landry - DIT"
-    email: "landry.shema@62.163.54.21.com"
+    email: "landry.shema@bankly-wester.com"
   onCallSupport:
     - (514) 641-5166
