--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -17,17 +17,10 @@ spring:
     hibernate: 
       ddl-auto: update
 management:
-  health:
-    defaults:
-      enabled: true
-    readinessstate:
-      enabled: true
-    livenessstate:
-      enabled: true
-  endpoint:
-    health:
-      probes:
-        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 accounts:
   message: "Welcome to Bankly accounts related local APIs "
   contactDetails:
