--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -25,6 +25,6 @@ accounts:
   message: "Welcome to Bankly accounts related local APIs "
   contactDetails:
     name: "Dev Team"
-    email: "landry.shema@bankly-wester.com"
+    email: "dev.team@bankly-wester.com"
   onCallSupport:
     - (514) 641-5166
