--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -16,7 +16,11 @@ spring:
 # MySQL
     hibernate: 
       ddl-auto: update
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 accounts:
   message: "DIT APIs for ACCOUNTS"
   contactDetails:
