--- a/loan-local.yml
+++ b/loan-local.yml
@@ -22,10 +22,10 @@ management:
       exposure:
         include: "*"
 loan:
-  accountsApiUrl: http://127.0.0.1:8095/api/v1/customer
+  accountsApiUrl: http://localhost:8095/api/v1/customer
   message: "DIT APIs for LOAN"
   contactDetails:
-    name: "Dev Team"
+    name: "Loan Dev Team"
     email: "dev.team@bankly-wester.com"
   onCallSupport:
     - (514) 641-5166
