--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -24,7 +24,7 @@ management:
 accounts:
   message: "DIT APIs for ACCOUNTS"
   contactDetails:
-    name: "Dev Team"
+    name: "DEV TEAM"
     email: "dev.team@bankly-wester.com"
   onCallSupport:
     - (514) 641-5166
