--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -45,7 +45,7 @@ management:
 management:
   tracing:
     sampling:
-      probability: 1-0
+      probability: 1.0
 
 #-------- ENV VARIABLES CONFIGS --------------
 accounts:
