--- a/broker-dit.yml
+++ b/broker-dit.yml
@@ -1,6 +1,9 @@
+server:
+  port: 9090
 spring:
   application:
     name: broker
+#-------- CLOUD CONFIGS, RABBITMQ --------------
   cloud:
     function:
       definition: accountDetails
@@ -18,6 +21,19 @@ spring:
     username: guest
     password: guest
     connection-timeout: 10s
+#-------- ACTUATOR & OBSERVABILITY CONFIGS --------------
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+management:
+  endpoint:
+    health:
+      show-details: always
+management:
+  tracing:
+    sampling:
+      probability: 1.0
 
-server:
-  port: 9090
+
