--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -58,4 +58,4 @@ accounts:
   onCallSupport:
     - (514) 641-5166
   defaultBranchId: 1000
-  bindingsCreateTransaction: createTransactionDetails
+  bindingsCreateTransaction: bankTransactionDetails
