--- a/broker-dit.yml
+++ b/broker-dit.yml
@@ -15,6 +15,8 @@ spring:
         accountDetails-out-0:
           destination: communications-sent
 
+        bankTransactionDetails-in-0:
+          destination: send-communication
   rabbitmq:
     host: rabbitmq-service
     port: 5672
