--- a/broker-dit.yml
+++ b/broker-dit.yml
@@ -18,7 +18,7 @@ spring:
           group: ${spring.application.name}
           
         accountDetails-out-0:
-          destination: communications-sent
+          destination: accounts-details-topic
 
 
   rabbitmq:
