--- a/accounts-dit.yml
+++ b/accounts-dit.yml
@@ -62,4 +62,4 @@ accounts:
   onCallSupport:
     - (514) 641-5166
   defaultBranchId: 1000
-  bindingsCreateTransaction: bankTransactionDetails
+  bindingsCreateTransaction: bankTransactionDetails-out-0
