--- a/loan-dit.yml
+++ b/loan-dit.yml
@@ -4,7 +4,7 @@ server:
   port: 8090
 spring:
   application:
-    name: loan
+    name: bankly-loan-service
 #-------- DATASOURCE CONFIGS --------------
   datasource:
     url: jdbc:mysql://loandb:3306/bankly_loan
