--- a/broker-dit.yml
+++ b/broker-dit.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
 spring:
   application:
-    name: broker
+    name: bankly-broker-service
 #-------- CLOUD CONFIGS, RABBITMQ --------------
   cloud:
     function:
